# Image-Steganography

./: .gitignore  CMakeLists.txt  ImSteg.pro  README.md
docs/project 1/: proj1_poster.pptx
docs/project 2/: Project Poster (154409 - Emmanuel Maneswa).pptx  Project Presentation (154409 - Emmanuel Maneswa).pptx  Project Report (154409 - Emmanuel Maneswa).docx
documentation_1/: proj1_documentation.docx  project.txt
gui/: main.qml  qml.qrc
gui/js/: embed.js  extract.js
gui/pages/: embed.qml  extract.qml  main.qml
gui/qml/: main.qml
include/: convert.hpp  middlemen.hpp  steganography.hpp
src/: convert.cpp  main.cpp  middlemen.cpp  steganography.cpp
